@@ -1,3 +1,7 @@
+2010-12-10  john ffitch  <jpff@codemist.co.uk>
+
+	* Opcodes/gab/gab.c (isChanged_set): Initialise p->old_inargs
+
 2010-12-05  john ffitch  <jpff@codemist.co.uk>
 
 	* H/aops.h (struct INCH): Rewritten
